--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -45,7 +45,7 @@
 
                     </LinearLayout>
 
-                    <ImageView
+                    <QuickContactBadge
                         android:id="@+id/img_profile"
                         android:layout_width="150dp"
                         android:layout_height="150dp"
@@ -54,6 +54,7 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/layout" />
+
 
                     <TextView
                         android:id="@+id/txt_name"
@@ -258,22 +259,22 @@
                     app:contentPadding="10dp">
 
                     <LinearLayout
-                        android:gravity="center"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:gravity="center">
 
                         <ImageView
                             android:layout_width="30dp"
                             android:layout_height="30dp"
-                            app:tint="@color/white"
                             android:padding="5dp"
-                            android:src="@drawable/ic_call" />
+                            android:src="@drawable/ic_call"
+                            app:tint="@color/white" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
-                            android:text="@string/call_1"
                             android:gravity="center"
+                            android:text="@string/call_1"
                             android:textColor="@color/white"
                             android:textSize="20sp" />
 
@@ -284,9 +285,9 @@
                 <androidx.cardview.widget.CardView
                     android:id="@+id/card_call_two"
                     android:layout_width="wrap_content"
-                    android:layout_weight="1"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
+                    android:layout_weight="1"
                     app:cardBackgroundColor="@color/orange"
                     app:cardCornerRadius="10dp"
                     app:cardElevation="1dp"
@@ -298,16 +299,16 @@
 
                         <ImageView
                             android:layout_width="30dp"
-                            app:tint="@color/white"
-                            android:padding="5dp"
                             android:layout_height="30dp"
-                            android:src="@drawable/ic_call" />
+                            android:padding="5dp"
+                            android:src="@drawable/ic_call"
+                            app:tint="@color/white" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
-                            android:text="@string/call_2"
                             android:gravity="center"
+                            android:text="@string/call_2"
                             android:textColor="@color/white"
                             android:textSize="20sp" />
 
@@ -332,15 +333,15 @@
                         <ImageView
                             android:layout_width="30dp"
                             android:layout_height="30dp"
-                            app:tint="@color/white"
                             android:padding="5dp"
-                            android:src="@drawable/ic_chat" />
+                            android:src="@drawable/ic_chat"
+                            app:tint="@color/white" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
-                            android:text="@string/chat"
                             android:gravity="center"
+                            android:text="@string/chat"
                             android:textColor="@color/white"
                             android:textSize="20sp" />
 
