--- a/app/src/main/res/layout/layout_item_call_history.xml
+++ b/app/src/main/res/layout/layout_item_call_history.xml
@@ -330,6 +330,23 @@
                             app:tint="@color/white" />
 
                     </androidx.cardview.widget.CardView>
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/card_add_edit"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp"
+                        app:cardBackgroundColor="@color/orange"
+                        app:cardCornerRadius="10dp"
+                        app:cardElevation="1dp"
+                        app:contentPadding="10dp">
+
+                        <ImageView
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:src="@drawable/ic_add_circle"
+                            app:tint="@color/white" />
+
+                    </androidx.cardview.widget.CardView>
 
                 </LinearLayout>
 
