--- a/app/src/main/res/layout/activity_dialer.xml
+++ b/app/src/main/res/layout/activity_dialer.xml
@@ -2,16 +2,16 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="10dp"
-    tools:context=".ui.Dialer"
-    android:id="@+id/container">
+    tools:context=".ui.Dialer">
 
     <LinearLayout
         android:id="@+id/layout_socialMedia"
         android:layout_width="0dp"
-        android:layout_height="200dp"
+        android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -32,6 +32,16 @@
 
     </LinearLayout>
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recy_list_contacts"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:listitem="@layout/layout_item_contacts"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/included_dialer"
+        app:layout_constraintTop_toBottomOf="@+id/layout_socialMedia" />
+
     <include
         android:id="@+id/included_dialer"
         layout="@layout/dialer_number_layout"
@@ -39,6 +49,6 @@
         android:layout_height="0dp"
         android:layout_alignParentBottom="true"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/layout_socialMedia" />
+        app:layout_constraintTop_toBottomOf="@+id/recy_list_contacts" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
