--- a/app/src/main/res/layout/fragment_call_history.xml
+++ b/app/src/main/res/layout/fragment_call_history.xml
@@ -50,59 +50,120 @@
         <LinearLayout
             android:id="@+id/layout_tabs"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:layout_height="40dp"
             android:orientation="horizontal"
+            app:layout_constraintBottom_toTopOf="@+id/layout_line"
             app:layout_constraintTop_toBottomOf="@+id/layout_toolbar">
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/card_history"
                 android:layout_width="0dp"
-                android:layout_height="30dp"
-                android:layout_margin="10dp"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
-                app:cardBackgroundColor="@color/orange"
-                app:cardCornerRadius="10dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/txt_title">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="Call History"
-                    android:textColor="@color/white" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center">
+
+                    <ImageView
+                        android:id="@+id/img_ic_history"
+                        android:layout_width="24dp"
+                        android:visibility="gone"
+                        android:layout_height="24dp"
+                        android:layout_marginTop="3dp"
+                        android:backgroundTint="@color/orange"
+                        android:gravity="center"
+                        android:src="@drawable/ic_history" />
+
+                    <TextView
+                        android:id="@+id/txt_call_history"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginStart="5dp"
+                        android:gravity="center"
+                        android:fontFamily="sans-serif-black"
+                        android:text="@string/call_history"
+                        android:textColor="@color/orange" />
+                </LinearLayout>
+
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/card_contacts"
                 android:layout_width="0dp"
-                android:layout_height="30dp"
-                android:layout_margin="10dp"
+                android:layout_height="match_parent"
+                android:layout_marginStart="2dp"
                 android:layout_weight="1"
-                app:cardBackgroundColor="@color/orange"
-                app:cardCornerRadius="10dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/txt_title">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="Contacts"
-                    android:textColor="@color/white" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center">
+
+                    <ImageView
+                        android:id="@+id/img_contacts"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:gravity="center"
+                        android:visibility="gone"
+                        android:src="@drawable/ic_sms" />
+
+                    <TextView
+                        android:id="@+id/txt_contacts"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginStart="5dp"
+                        android:gravity="center"
+                        android:fontFamily="sans-serif-black"
+                        android:text="@string/contacts"
+                        android:textColor="@color/black" />
+
+                </LinearLayout>
+
             </androidx.cardview.widget.CardView>
 
         </LinearLayout>
 
+        <LinearLayout
+            android:id="@+id/layout_line"
+            android:layout_width="match_parent"
+            android:layout_height="5dp"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/layout_tabs"
+            app:layout_constraintBottom_toTopOf="@+id/layout_recyclerview">
+
+            <View
+                android:id="@+id/view_history"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                android:background="@color/orange" />
+
+            <View
+                android:id="@+id/view_contacts"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                android:background="@color/white" />
+        </LinearLayout>
+
         <RelativeLayout
+            android:id="@+id/layout_recyclerview"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/layout_tabs">
+            app:layout_constraintTop_toBottomOf="@+id/layout_line">
 
             <RelativeLayout
                 android:layout_width="match_parent"
