--- a/app/src/main/res/layout/fragment_call_history.xml
+++ b/app/src/main/res/layout/fragment_call_history.xml
@@ -175,12 +175,15 @@
                     android:id="@+id/recycler_view_call_history"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    tools:listitem="@layout/item_callhistory"
                     android:padding="10dp" />
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recy_list_contacts"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:padding="10dp"
+                    android:visibility="gone"
                     tools:listitem="@layout/layout_item_contacts" />
             </RelativeLayout>
 
