--- a/app/src/main/res/layout/fragment_call_history.xml
+++ b/app/src/main/res/layout/fragment_call_history.xml
@@ -194,7 +194,7 @@
                         android:layout_marginStart="5dp"
                         android:fontFamily="sans-serif-black"
                         android:gravity="center"
-                        android:text="Ravourite"
+                        android:text="@string/favourite"
                         android:layout_margin="5dp"
                         android:textColor="@color/black" />
 
