--- a/app/src/main/res/layout/fragment_call_history.xml
+++ b/app/src/main/res/layout/fragment_call_history.xml
@@ -53,6 +53,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
+            app:tabInlineLabel="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/layout_toolbar"
