--- a/app/src/main/res/layout/layout_item_contacts.xml
+++ b/app/src/main/res/layout/layout_item_contacts.xml
@@ -92,7 +92,7 @@
         android:layout_marginTop="10dp"
         android:layout_weight="2"
         android:orientation="vertical"
-        android:visibility="visible">
+        android:visibility="gone">
 
         <LinearLayout
             android:id="@+id/layout2"
