--- a/app/src/main/res/layout/layout_item_call_history.xml
+++ b/app/src/main/res/layout/layout_item_call_history.xml
@@ -6,7 +6,9 @@
     android:layout_margin="5dp"
     app:cardCornerRadius="10dp"
     app:cardElevation="5dp"
+    app:cardBackgroundColor="@color/white"
     app:cardMaxElevation="5dp"
+    android:background="@color/white"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
